# StuckFish

./: .gitignore  requirements.txt  suckfish
engine/: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  round_collect.py
engine/src/: chess.rs  lib.rs  main.rs  nnue.rs  nnue_runtime.rs  search.rs  time_manager.rs  tt.rs
scripts/: build.sh  run.sh  setup.sh
src/: main.py
