[package]
name = "suckfish"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
parquet = { version = "50.0.0", features = ["arrow"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
tch = "0.22.0"

[[bin]]
name = "train_nnue"
path = "bin/train_nnue.rs"
